--- a/en/m/monition.720241.wikitext
+++ b/en/m/monition.720241.wikitext
@@ -42,7 +42,7 @@ From {{etyl|xno|en}} {{m|fro|monicion}}, {{etyl|frm|en}} {{m|frm|monicion}}, and
 {{trans-top|caution or warning}}
 * Finnish: {{t+|fi|varoitus}}
 * German: {{t+|de|Mahnung|f}}
-* Macedonian: {{t|mk|предупредување|n|tr=predupredúvanje|sc=Cyrl}}
+* Macedonian: {{t|mk|предупредување|n}}
 {{trans-mid}}
 * Russian: {{t+|ru|предупреждение|n}}
 * Serbo-Croatian: {{t+|sh|savjet|m}}, {{t+|sh|opomena|f}}, {{t+|sh|upozorenje|n}}
