/* Synonyms */ +thesaurus <though#58117986>

--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -84,7 +84,7 @@ From {{etyl|enm|en}} {{m|enm|thaugh}}, {{m|enm|thagh|}}, from {{etyl|ang|en}} {{
 * {{sense|if}} This sense is now archaic, except in the fixed expression {{m|en|as though}}.
 
 ====Synonyms====
-* {{sense|although}} {{l|en|although}}, {{l|en|even though}}
+* {{sense|although}} {{l|en|although}}, {{l|en|even though}}; see also [[Thesaurus:even though]]
 
 ====Translations====
 {{trans-top|although}}
