--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -262,6 +262,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 {{trans-mid}}
 * Portuguese: {{t+|pt|peso|m}}
 * Romanian: {{t+|ro|greutate|f}}
+* Russian: {{t+|ru|вес|m}}
 {{trans-bottom}}
 
 {{trans-top|weight for training muscles}}
