/* Derived terms */ <thing#58134849>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -74,6 +74,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 |all things to all people
 |anything
 |bright young thing
+|do one's own thing
 |everything
 |here's the thing
 |make a big thing out of
