--- a/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
+++ b/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
@@ -20,7 +20,7 @@
 {{trans-mid}}
 * Georgian: {{t|ka|რუსეთის საბჭოთა ფედერაციული სოციალისტური რესპუბლიკა}}
 * German: {{t|de|Russische Sozialistische Föderative Sowjetrepublik|f}}
-* Macedonian: {{t|mk|Руска Советска Федеративна Социјалистичка Република|f|tr=Rúska Sóvetska Federatívna Socijalístička Repúblika}}
+* Macedonian: {{t|mk|Руска Советска Федерати́вна Социјалистичка Република|f}}
 * Romanian: {{t|ro|Republica Sovietică Federativă Socialistă Rusă|f}}
 * Russian: {{t+|ru|Росси́йская Сове́тская Федерати́вная Социалисти́ческая Респу́блика|f}}
 {{trans-bottom}}
