--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -76,6 +76,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 |ordenation mill
 |paper mill
 |pecker mill
+|powder mill
 |pulp mill
 |puppy mill
 |rice mill
@@ -83,6 +84,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 |run-of-the-mill
 |[[rumor mill]], [[rumour mill]]
 |steel mill
+|Temple Mills
 |tide mill
 |Tide Mills
 |trouble at t' mill
