--- a/en/c/CFC.26242.wikitext
+++ b/en/c/CFC.26242.wikitext
@@ -10,7 +10,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{lb|en|organic chemistry}} {{initialism of|en|chlorofluorocarbon}}, a class of [[molecule]]s containing [[chlorine]], [[fluorine]] and [[carbon]] [[atom]]s
+# {{lb|en|organic chemistry}} {{initialism of|en|chlorofluorocarbon|nodot=1}}, a class of [[molecule]]s containing [[chlorine]], [[fluorine]] and [[carbon]] [[atom]]s
 
 ====Related terms====
 {{sense|chlorofluorocarbon}}
