--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -14,11 +14,11 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 {{en-verb|binds|binding|bound|bound|past_ptc2=bounden|past_ptc2_qual=archaic, rare}}
 
 # {{lb|en|intransitive}} To tie; to confine by any [[ligature]].
-#* {{rfdate|en}} {{w|Shakespeare}}
+#* {{rfdatek|en|Shakespeare}}
 #*: They that reap must sheaf and '''bind'''.
 # {{lb|en|intransitive}} To cohere or stick together in a mass.
 #: {{ux|en|Just to make the cheese more '''binding'''}}
-#* {{rfdate|en}} {{w|Mortimer}}
+#* {{rfdatek|en|Mortimer}}
 #*: clay '''binds''' by heat.
 # {{lb|en|intransitive}} To be restrained from motion, or from customary or natural action, as by friction.
 #: {{ux|en|I wish I knew why the sewing machine '''binds''' up after I use it for a while.}}
@@ -29,18 +29,18 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 # {{lb|en|transitive}} To confine, restrain, or hold by physical force or influence of any kind.
 #: {{ux|en|Gravity '''binds''' the planets to the sun.}}
 #: {{ux|en|Frost '''binds''' the earth.}}
-#* {{rfdate|en}} Job xxviii. 11.
+#* Bible, Job xxviii. 11.
 #*: He '''bindeth''' the floods from overflowing.
-#* {{rfdate|en}} Luke xiii. 16.
+#* Bible, Luke xiii. 16.
 #*: Whom Satan hath '''bound''', lo, these eighteen years.
 # {{lb|en|transitive}} To [[couple]].
 # {{lb|en|figuratively}} To oblige, restrain, or hold, by authority, law, duty, promise, vow, affection, or other social tie.
 #: {{ux|en|to '''bind''' the conscience&emsp; to '''bind''' by kindness&emsp; '''bound''' by affection&emsp; commerce '''binds''' nations to each other}}
-#* {{rfdate|en}} {{w|Milton}}
+#* {{rfdatek|en|Milton}}
 #*: Who made our laws to '''bind''' us, not himself.
 #* {{RQ:Shakespeare King John|act=III|scene=iii|page=11|column=2|passage=I am much '''bounden''' to your Maieſty.}}
-#* {{quote-book|en|author=William Roper|authorlink=William Roper|title=The Mirrour of Vertue in Worldly Greatnes. Or The Life of Syr Thomas More Knight, sometime Lo. Chancellour of England|location=Paris [''i.e.'' Saint-Omer]|publisher=[Printed at the English College Press]|year=1626|oclc=837637215|author2=S. W. Singer|title2=The Life of Sir Thomas More, by His Son-in-law, William Roper, Esq.{{nb...|With Notes, and an Appendix of Letters. A New Edition, Revised and Corrected, by S. W. Singer.}}|edition=new revised and corrected|location2=Chiswick, London|publisher2=From the press of [[w:Charles Whittingham|C[harles] Whittingham]], for R. Triphook,{{nb...|Old Bond Street, London}}|year2=1822|page2=36|pageurl2=https://books.google.com/books?id=ZlpMAAAAcAAJ&pg=PA36|oclc2=54291031|passage=In the concluding whereof Sir {{w|Thomas More}} so worthily handled himself, procuring in our league far more benefits unto this realm, than at that time, by the king or his council was thought possible to be compassed, that for his good service in that voyage, the king, when he after made him Lord Chancellor, caused the Duke of Norfolk openly to declare to the people, as you shall hear hereafter more at large, how much all England was '''bounden''' unto him.}}
-#* {{quote-book|en|author=William A. Owens|authorlink=William A. Owens|chapter=2|title=Look to the River|location=New York, N.Y.|publisher=[[w:Atheneum Books|Atheneum]]|year=1963|oclc2=933573|title2=Look to the River|series2=Texas Tradition Series|seriesvolume2=8|location2=Fort Worth, Tex.|publisher2={{w|Texas Christian University Press}}|year2=1988|page2=20|pageurl2=https://books.google.com/books?id=vpU2AYD6WEkC&pg=PA20|isbn2=978-0-87565-076-0|passage=He'll mind, I reckon, not getting any work out'n me, but I won't be '''bounden''' to him any longer. How can he keep me if I ain't '''bounden''' to him?}}
+#* {{quote-book|en|author={{w|William Roper}}| title=The Mirrour of Vertue in Worldly Greatnes. Or The Life of Syr Thomas More Knight, sometime Lo. Chancellour of England| location=Paris [''i.e.'' Saint-Omer]| publisher=[Printed at the English College Press]| year=1626| oclc=837637215| author2=S. W. Singer| title2=The Life of Sir Thomas More, by His Son-in-law, William Roper, Esq.{{nb...|With Notes, and an Appendix of Letters. A New Edition, Revised and Corrected, by S. W. Singer.}}| edition=new revised and corrected| location2=Chiswick, London| publisher2=From the press of [[w:Charles Whittingham|C[harles] Whittingham]], for R. Triphook,{{nb...|Old Bond Street, London}}| year2=1822| page2=36| pageurl2=https://books.google.com/books?id=ZlpMAAAAcAAJ&pg=PA36| oclc2=54291031| passage=In the concluding whereof Sir {{w|Thomas More}} so worthily handled himself, procuring in our league far more benefits unto this realm, than at that time, by the king or his council was thought possible to be compassed, that for his good service in that voyage, the king, when he after made him Lord Chancellor, caused the Duke of Norfolk openly to declare to the people, as you shall hear hereafter more at large, how much all England was '''bounden''' unto him.}}
+#* {{quote-book|en|author={{w|William A. Owens}}| chapter=2| title=Look to the River| location=New York, N.Y.| publisher=[[w:Atheneum Books|Atheneum]]| year=1963| oclc2=933573| title2=Look to the River| series2=Texas Tradition Series| seriesvolume2=8| location2=Fort Worth, Tex.| publisher2={{w|Texas Christian University Press}}| year2=1988| page2=20| pageurl2=https://books.google.com/books?id=vpU2AYD6WEkC&pg=PA20| isbn2=978-0-87565-076-0| passage=He'll mind, I reckon, not getting any work out'n me, but I won't be '''bounden''' to him any longer. How can he keep me if I ain't '''bounden''' to him?}}
 # {{lb|en|law}} To put (a person) under definite legal obligations, especially, under the obligation of a bond or covenant.
 # {{lb|en|law}} To place under legal obligation to serve.
 #: {{ux|en|to '''bind''' an apprentice&emsp; '''bound''' out to service}}
