--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -60,6 +60,7 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*
 * Catalan: {{t+|ca|mostela|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|伶鼬|tr=língyòu|}}
+* Cimbrian: {{t|cim|bròiballe|n}}
 * Czech: {{t|cs|lasice|f}}
 * Danish: {{t|da|væsel|c}}, {{t+|da|brud|c}}
 * Dutch: {{t+|nl|wezel|f|m}}
@@ -78,11 +79,11 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*
 * Irish: {{t|ga|bláthnaid ghallda|f}}
 * Italian: {{t+|it|donnola|f}}
 * Japanese: {{t+|ja|イタチ|tr=itachi|sc=Jpan}}, {{t+|ja|鼬|tr=いたち, itachi|sc=Jpan}}, {{t|ja|鼬鼠|tr=いたち, itachi|sc=Jpan}}, {{t|ja|飯綱|tr=いいずな, īzuna}}
+{{trans-mid}}
 * Korean: {{t|ko|족제비}}
 * Latgalian: {{t|ltg|luoseica}}
 * Latin: {{t|la|mūstēla|f}}
 * Latvian: {{t|lv|zebiekste|f}}
-{{trans-mid}}
 * Lithuanian: {{t|lt|žebenkštis|m}}
 * Low German: {{t|nds|Wesel|n}}
 * Luxembourgish: {{t|lb|Wisel|n}}
