--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -158,7 +158,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Maltese: {{t|mt|teorija|f}}
 * Maori: {{t|mi|ariā}}
 * Mongolian: {{t+|mn|онол}}
-* Moroccan Amazigh: {{t|zgh|ⵜⵉⵥⵕⵉ|tr=Tiẓṛi}}
+* Moroccan Amazigh: {{t|zgh|ⵜⵉⵥⵕⵉ|tr=tiẓṛi}}
 * Norwegian: {{t|no|teori|m}}
 * Occitan: {{t|oc|teoria|f}}
 * Pashto: {{t+|ps|نظريه|f|tr=nazaryá}}, {{t+|ps|تيوري|f|tr=tyorí}}
@@ -180,7 +180,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Turkish: {{t+|tr|kuram}}, {{t+|tr|nazariye}} {{qualifier|obsolecent}}, {{t+|tr|teori}}
 * Turkmen: {{t|tk|teoriýa}}
 * Ukrainian: {{t|uk|тео́рія|f}}
-* Urdu: {{t|ur|نظریہ|f|tr=nazariya}}
+* Urdu: {{t|ur|نظریہ|f|tr=nazariyā}}
 * Uyghur: {{t|ug|نەزەرىيە}}
 * Uzbek: {{t+|uz|nazariya}}, {{t+|uz|teoriya}}
 * Vietnamese: {{t+|vi|lý thuyết}}, {{t+|vi|lý luận}}, {{t+|vi|học thuyết}}
@@ -242,7 +242,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Irish: {{t|ga|teoiric|f}}
 * Italian: {{t+|it|teoria|f}}
 * Japanese: {{t+|ja|定理|tr=ていり, teiri}}, {{t+|ja|理論|tr=りろん, riron}}, {{t+|ja|学説|tr=がくせつ, gakusetsu}}
-* Macedonian: {{t|mk|теорија|f|tr=teórija}}
+* Macedonian: {{t|mk|теорија|f}}
 {{trans-mid}}
 * Malay: {{t|ms|teori}}
 * Maltese: {{t|mt|teorija}}
