--- a/en/o/Oaxaca.775466.wikitext
+++ b/en/o/Oaxaca.775466.wikitext
@@ -67,7 +67,7 @@ Borrowed from {{bor|en|es|Oaxaca}}, from {{der|en|nci|Huāxacac}}, from {{m|nci|
 ===Noun===
 {{en-noun|~}}
 
-# A white, semihard [[cheese]] from Mexico.
+# A [[semihard]] [[white]] [[cheese]] from the [[Oaxaca]] region of [[Mexico]].
 
 {{topics|en|Cities in Mexico|States of Mexico}}
 
