/* Polish */ <inside job#58167436>

--- a/en/i/inside job.854992.wikitext
+++ b/en/i/inside job.854992.wikitext
@@ -35,14 +35,14 @@
 ==Polish==
 
 ===Etymology===
-{{etyl|en|pl}} {{m|en|inside job}}
+From {{bor|pl|en|inside job}}.
 
 ===Pronunciation===
 * {{pl-IPA|/insajd 'dżob/}}
 * {{hyphenation|pl|in|side|job}}
 
 ===Noun===
-{{pl-noun|m-in}}
+{{pl-noun|m-in|head=inside job}}
 
 # {{lb|pl|chiefly in conspiracy theories}} [[inside job#en|inside job]]
 
