--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -199,7 +199,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Japanese: {{t+|ja|に|tr=...ni|alt=...に}}
 * Korean: {{t+|ko|에|alt=...에}}
 * Kurdish:
-*: Central Kurdish: {{t|ckb||tr=le}}
+*: Central Kurdish: {{t|ckb|لە}}
 *: Northern Kurdish: {{t+|kmr|li}}
 {{trans-mid}}
 * Ladin: {{t-needed|lld}}
@@ -262,7 +262,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Japanese: {{t+|ja|に|tr=...ni|alt=...に}}, {{t+|ja|を|tr=...o|alt=...を}}
 * Korean: {{t+|ko|에게|alt=...에게}}, {{t+|ko|로|alt=...로}}, {{t|ko|에게로|alt=...에게로}}
 * Kurdish:
-*: Central Kurdish: {{t|ckb||tr=le}}
+*: Central Kurdish: {{t|ckb|لە}}
 *: Northern Kurdish: {{t+|kmr|li}}
 * Ladin: {{t-needed|lld}}
 {{trans-mid}}
