--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -454,6 +454,8 @@ From {{inh|goh|gem-pro|*þingą}}
 * {{desc|gmh|ding}}
 ** {{desc|de|Ding}}
 ** {{desc|lb|Déngen}}
+** {{desc|gmw-rfr}}
+*** {{desc|pdc|Ding}}
 
 ----
 
