--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -68,8 +68,8 @@ Colloquial form of {{m|en|yea}} or {{m|en|yes}}.
 ===Interjection===
 {{en-interj}}
 
-# Expressing [[joy]], [[celebration]], [[glee]], etc.
-#: '''Yeah!''' We did it!
+# {{n-g|Expressing [[joy]], [[celebration]], [[glee]], etc.}}
+#: {{ux|en|'''Yeah!''' We did it!}}
 
 ====Derived terms====
 * {{l|en|yeah right}}
