--- a/en/a/armistices.746857.wikitext
+++ b/en/a/armistices.746857.wikitext
@@ -7,3 +7,12 @@
 
 ===Anagrams===
 * {{anagrams|en|a=aceiimrsst|semiracist}}
+
+----
+
+==French==
+
+===Noun===
+{{head|fr|noun plural form}}
+
+# {{plural of|fr|armistice}}
