--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -12,7 +12,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 {{en-verb}}
 
 # {{lb|en|archaic|transitive}} To [[listen]] to (something or someone); to pay attention to; regard; heed. {{defdate|from 15th c.}}
-#* {{rfdate|en|and other bibliographic particulars}} Sir {{w|Philip Sidney}}
+#* {{rfdatek|en|Sir Philip Sidney}}
 #*: The diligent pilot in a dangerous tempest doth not '''attend''' the unskilful words of the passenger.
 # {{lb|en|archaic|intransitive}} To [[listen]] ({{m|en|to}}, {{m|en|unto}}). {{defdate|from 15th c.}}
 #* {{w|Rudyard Kipling}}, ''The Beginning of the Armadillos''
@@ -22,11 +22,11 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 #* {{quote-book|en|year=1918| author={{w|W. B. Maxwell}}| chapter=15| title=[http://openlibrary.org/works/OL1097634W The Mirror and the Lamp]| passage=Edward Churchill still '''attended''' to his work in a hopeless mechanical manner like a sleep-walker who walks safely on a well-known round. But his Roman collar galled him, his cossack stifled him, his biretta was as uncomfortable as a merry-andrew's cap and bells.}}
 # {{lb|en|ambitransitive}} To [[wait upon]] as a [[servant]] etc.; to accompany to assist (someone). {{defdate|from 15th c.}}
 #: {{ux|en|Valets '''attend''' to their employer's wardrobe.}}
-#* {{rfdate|en|and other bibliographic particulars}} {{w|Edmund Spenser}}
+#* {{rfdatek|en|Edmund Spenser}}
 #*: The fifth had charge sick persons to '''attend'''.
-#* {{rfdate|en|and other bibliographic particulars}} {{w|William Shakespeare}}
+#* {{rfdatek|en|William Shakespeare}}
 #*: '''Attends''' the emperor in his royal court.
-#* {{rfdate|en|and other bibliographic particulars}} {{w|Thomas Babington Macaulay, 1st Baron Macaulay|Thomas Macaulay}}
+#* {{rfdatek|en|Thomas Babington Macaulay, 1st Baron Macaulay|Thomas Macaulay}}
 #*: With a sore heart and a gloomy brow, he prepared to '''attend''' William thither.
 # {{senseid|en|to be present at}}{{lb|en|transitive}} To be [[present]] at (an event or place) in order to take part in some action or proceedings; to regularly go to (an event or place). {{defdate|from 17th c.}}
 #: {{ux|en|Children must '''attend''' primary school.}}
@@ -39,13 +39,13 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 #* {{quote-web|en|author=Prince Edward Island Court of Appeal| work=R. v. Yeo| url=http://canlii.ca/t/gnr68| year=2016| accessdate=2016-05-08| passage=There were a few errors in the testimony of [a civilian witness] which the trial judge noted – one, that they '''attended''' at the Fairhurst residence the day before the robbery, and two, that Wakelin was with them.}}
 # To be present with; to accompany; to be united or consequent to.
 #: {{ux|en|a measure '''attended''' with ill effects}}
-#* {{rfdate|en|and other bibliographic particulars}} {{w|John Dryden}}
+#* {{rfdatek|en|John Dryden}}
 #*: What cares must then '''attend''' the toiling swain.
 #* {{quote-book|en|year=1922| author={{w|Ben Travers}}| chapter=5| title=[http://openlibrary.org/works/OL1521052W A Cuckoo in the Nest]| passage=The most rapid and most seductive transition in all human nature is that which '''attends''' the palliation of a ravenous appetite. There is something humiliating about it.{{...}}Can those harmless but refined fellow-diners be the selfish cads whose gluttony and personal appearance so raised your contemptuous wrath on your arrival?}}
 # To wait for; to await; to remain, abide, or be in store for.
-#* {{rfdate|en|and other bibliographic particulars}} {{w|John Locke}}
+#* {{rfdatek|en|John Locke}}
 #*: the state that '''attends''' all men after this
-#* {{rfdate|en|and other bibliographic particulars}} {{w|John Dryden}}
+#* {{rfdatek|en|John Dryden}}
 #*: Three days I promised to '''attend''' my doom.
 
 =====Synonyms=====
