--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -112,8 +112,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 # [[decay|Decaying]] matter.
 #* {{quote-book|en|title=Unseen City|author=Nathanael Johnson| year=2016| ISBN=9781623363857| page=115| passage=When a turkey vulture detects the scent of '''rot''', it circles down, tracing the plume of chemicals to its source.}}
 # Any of several [[disease]]s in which [[breakdown]] of [[tissue]] occurs.
-#* {{rfdate|en|John Milton}}
-#*: His cattle must of '''rot''' and murrain die.
+#* {{quote-book|en|title=Paradise Lost|author=John Milton| year=1658–1663|passage=His cattle must of '''rot''' and murrain die.}}
 # Verbal [[nonsense]].
 
 ====Synonyms====
