--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -146,9 +146,10 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Hungarian: {{t+|hu|kuruzsló}}
 * Icelandic: {{t+|is|skottulæknir|m}}
 * Ido: {{t+|io|sharlatano}}, {{t|io|medikacho}}
-* Indonesian: {{t+|id|dukun}}
-* Italian: {{t+check|it|ciarlatano|m}}, {{t-check|it|[[medico]] [[empirico]]|m}} <!-- was "[[medico]] [[empirico]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
 {{trans-mid}}
+* Indonesian: {{t+|id|dukun}}
+* Irish: {{t|ga|dochtúir bréige|m}}
+* Italian: {{t+check|it|ciarlatano|m}}, {{t-check|it|[[medico]] [[empirico]]|m}} <!-- was "[[medico]] [[empirico]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
 * Japanese: {{t|ja|やぶ医者|tr=yabuisha}}, {{t|ja|もぐりの医者|tr=moguri no isha|sc=Jpan}}
 * Norman: {{t|nrf|dgéthisseux|m}} {{q|Jersey}}
 * Norwegian:
@@ -175,9 +176,10 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * German: {{t+|de|Quacksalber|m}}, {{t+|de|Quacksalberin|f}}
 * Greek: {{t+|el|τσαρλατάνος|m}}
 *: Ancient: {{t|grc|ὀχλαγωγός|m}}
-* Icelandic: {{t+|is|fúskari|m}}, {{t+|is|loddari|m}}, {{t|is|falsari|m}}, {{t|is|svikari|m}}
 {{trans-mid}}
+* Icelandic: {{t+|is|fúskari|m}}, {{t+|is|loddari|m}}, {{t|is|falsari|m}}, {{t|is|svikari|m}}
 * Ido: {{t+|io|sharlatano}}
+* Irish: {{t|ga|potrálaí|m}}, {{t|ga|soidéalach|m}}
 * Italian: {{t+|it|ciarlatano|m}}, {{t+|it|imbonitore|m}}, {{t|it|pataccaro|m}}
 * Japanese: {{t|ja|ペテン師|tr=peten-shi}}
 * Polish: {{t+|pl|szarlatan|m-pr}}
