--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -47,6 +47,7 @@ From {{der|en|grc|μικρός||small}}, or shortened form for modern words form
 
 # [[mic]] (microphone)
 # [[micro#English|micro]] (microcomputer)
+# {{gloss|obsolete}} [[microphone]]
 
 ===Further reading===
 * {{R:TLFi}}
