--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -32,9 +32,9 @@ Colloquial form of {{m|en|yea}} or {{m|en|yes}}.
 * Dutch: {{t+|nl|ja}}, {{t+|nl|jawel}}
 * Finnish: {{t+|fi|joo}}, {{t+|fi|juu}}
 * French: {{t+|fr|ouais}}
-* German: {{qualifier|yeah:}} {{t+|de|jo}}, {{t|de|joa}}; {{qualifier|yes:}} {{t+|de|ja}}
+* German: {{qualifier|yeah}} {{t+|de|jo}}, {{t|de|joa}}; {{qualifier|yes}} {{t+|de|ja}}
 * Greek: {{t+|el|ναι}}
-* Hindi: {{t+|hi|हाँ|tr=hā̃|sc=Deva}}
+* Hindi: {{t+|hi|हाँ}}
 * Hungarian: {{t+|hu|igen}}
 * Icelandic: {{t+|is|já}}
 * Interlingua: {{t+|ia|si}}
@@ -81,7 +81,7 @@ Colloquial form of {{m|en|yea}} or {{m|en|yes}}.
 * French: {{t+|fr|ouais}}
 * Italian: {{t+|it|sì}}, {{t+|it|vai}}, {{t+|it|evvai}}, {{t|it|evviva}}
 {{trans-mid}}
-* Japanese: {{t|ja|やった}} (yatta)
+* Japanese: {{t|ja|やった|tr=yatta}}
 * Portuguese: {{t+|pt|é!}}, {{t|pt|isso aí!}}
 * Russian: {{t+|ru|да!}}, {{t+|ru|ура́!}}, {{t|ru|э-ге́й!}}
 * Ukrainian: {{t+|uk|так!}}
