t+hu:[[kelvirág]] ([[WT:EDIT|Assisted]]) <cauliflower#58234130>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -52,7 +52,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 *: Ancient: {{t|grc|κάνωπον|n}}
 * Greenlandic: {{t|kl|blomkåli}}
 * Hindi: {{t+|hi|गोभी|f|sc=Deva}}, {{t+|hi|गोबी|f}}, {{t+|hi|फूल गोभी|f}}, {{t+|hi|कोबी|f}} {{qualifier|obsolete}}
-* Hungarian: {{t+|hu|karfiol}}
+* Hungarian: {{t+|hu|karfiol}}, {{t+|hu|kelvirág}}
 * Icelandic: {{t+|is|blómkál|n}}
 * Ido: {{t+|io|florkaulo}}
 * Indonesian: {{t|id|blumkol}}, {{t+|id|kubis bunga}}, {{t+|id|kembang kol}}
