--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -224,7 +224,7 @@ From {{der|es|la|mundus||world}}.
 |url=https://www.prensa.com/cultura/voz-animales-peligro-extincion_0_5136986302.html}}
 
 ====Derived terms====
-{{der3|es|comerse el mundo|el mundo es un pañuelo|el culo del mundo|hombre del mundo|medio mundo|mujer del mundo|mundillo|Mundo Antiguo|Nuevo Mundo|ponerse el mundo por montera|primer mundo|tercer mundo|todo el mundo|trotamundos}}
+{{der3|es|comerse el mundo|el mundo es un pañuelo|el culo del mundo|hombre del mundo|medio mundo|mujer del mundo|mundillo|Mundo Antiguo|nada del otro mundo|Nuevo Mundo|ponerse el mundo por montera|primer mundo|tercer mundo|todo el mundo|trotamundos}}
 
 ====Related terms====
 * {{l|es|mundano}}
