t+cmn:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <monarchism#58236102>

--- a/en/m/monarchism.720278.wikitext
+++ b/en/m/monarchism.720278.wikitext
@@ -15,11 +15,13 @@ Borrowed from {{bor|en|fr|monarchisme}}
 
 ====Translations====
 {{trans-top|advocacy of the monarchistic political system}}
+* Chinese:
+*: Mandarin: {{t-needed|cmn}}
 * Czech: {{t|cs|monarchismus|m}}
 * Estonian: {{t|et|monarhism}}
 * Finnish: {{t+|fi|monarkismi}}
-* German: {{t|de|Monarchismus|m}}
 {{trans-mid}}
+* German: {{t|de|Monarchismus|m}}
 * Italian: {{t+|it|monarchismo|m}}
 * Kurdish: {{t+|ku|monarşîzm|f}}, {{t+|ku|keyperestî|f}}
 * Manx: {{t|gv|ard-reeaghys|m}}
