--- a/en/i/individualize.742107.wikitext
+++ b/en/i/individualize.742107.wikitext
@@ -15,6 +15,7 @@
 ====Translations====
 {{trans-top|to give something its own individality}}
 {{trans-mid}}
+* German: {{t+|de|individualisieren}}
 {{trans-bottom}}
 
 {{trans-top|to modify soemthing to suit an individual}}
