--- a/en/u/unsightliness.742254.wikitext
+++ b/en/u/unsightliness.742254.wikitext
@@ -7,3 +7,12 @@
 {{en-noun|-|es}}
 
 # The state of being [[unsightly]].
+
+====Translations====
+{{trans-top|state of being unslightly}}
+* Chinese:
+*: Mandarin: {{t-needed|cmn}}
+{{trans-mid}}
+* Finnish: {{t-needed|fi}}
+* French: {{t-needed|fr}}
+{{trans-bottom}}
