/* Spanish */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <simple#58251191>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -483,6 +483,7 @@ Borrowed from {{bor|fro|la|simplex}}.
 ----
 
 ==Spanish==
+{{number box|es|1}}
 
 ===Etymology===
 Borrowed from {{bor|es|la|simplex}}.
