t+fi:[[rumuus]] t+fi:[[rumannäköisyys]] ([[WT:EDIT|Assisted]]) <unsightliness#58251916>

--- a/en/u/unsightliness.742254.wikitext
+++ b/en/u/unsightliness.742254.wikitext
@@ -13,6 +13,6 @@
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|rumuus}}, {{t|fi|rumannäköisyys}}
 * French: {{t-needed|fr}}
 {{trans-bottom}}
