/* Noun */ # {{lb|en|slang|in combination}} A [[vehicle]] whose [[engine]] has the specified number of [[cylinder]]s. #* '''1909''', ''Automotive Industries'' (volume 20, page 992) #*: Lion-Peugeot, whose recent successes at Barcelona and in Sicily have made them the favorites for the Boulogne race, will present two single-cylinder cars and one twin-cylinder. The '''one-lungers''' are special productions with a bore of 3.9 inches {{...}} <lunger#58254644>

--- a/en/l/lunger.774569.wikitext
+++ b/en/l/lunger.774569.wikitext
@@ -23,6 +23,9 @@
 {{en-noun}}
 
 # {{lb|en|slang}} A person afflicted with a [[disease]] of the [[lung]]s, especially one suffering from [[tuberculosis]].
+# {{lb|en|slang|in combination}} A [[vehicle]] whose [[engine]] has the specified number of [[cylinder]]s.
+#* '''1909''', ''Automotive Industries'' (volume 20, page 992)
+#*: Lion-Peugeot, whose recent successes at Barcelona and in Sicily have made them the favorites for the Boulogne race, will present two single-cylinder cars and one twin-cylinder. The '''one-lungers''' are special productions with a bore of 3.9 inches {{...}}
 
 =====Translations=====
 {{trans-top|lung disease- or TB-sufferer}}
