--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -15,20 +15,18 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 {{en-noun|~}}
 
 # {{senseid|en|device}} A device designed to be placed in the mouth and blown, or driven by steam or some other mechanism, to make a whistling sound.
-#* {{quote-journal|en|year=1961|month=March|author=""Balmore""|title=Driving and firing modern French steam locomotives|journal=Trains Illustrated|page=151|text=One thing I took great care to observe was obedience to the "'''whistle'''" boards which crop up with great frequency, for failure to sound the '''whistle''', if observed by the ''gendarmerie'', can bring about serious consequences.}}
-#* {{quote-book|en|year=2012|author=Andrew Martin|title=Underground Overground: A passenger's history of the Tube|publisher=Profile Books, {{ISBN|978-1846684777}}|pages=61-62|text=[...] and Temple station, which had to have a very modestly proportioned station building on the insistence of the Duke of Norfolk who owned the land on which it was built, and where the trains under the glass roof of the station were not allowed to blow their '''whistles''', at the insistence of the barristers in the nearby Inns of Court.}}
+#* {{quote-journal|en|year=1961|month=March|author=""Balmore""|title=Driving and firing modern French steam locomotives| journal=Trains Illustrated| page=151| text=One thing I took great care to observe was obedience to the "'''whistle'''" boards which crop up with great frequency, for failure to sound the '''whistle''', if observed by the ''gendarmerie'', can bring about serious consequences.}}
+#* {{quote-book|en|year=2012|author=Andrew Martin| title=Underground Overground: A passenger's history of the Tube| publisher=Profile Books, {{ISBN|978-1846684777}}| pages=61-62| text=[...] and Temple station, which had to have a very modestly proportioned station building on the insistence of the Duke of Norfolk who owned the land on which it was built, and where the trains under the glass roof of the station were not allowed to blow their '''whistles''', at the insistence of the barristers in the nearby Inns of Court.}}
 # An act of whistling.
 # {{senseid|en|sound}} A shrill, high-pitched sound made by whistling.
-#* {{quote-book|en|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
-|title={{w|The Celebrity}}|chapter=5
-|passage=We expressed our readiness, and in ten minutes were in the station wagon, rolling rapidly down the long drive, for it was then after nine.{{...}}As we reached the lodge we heard the '''whistle''', and we backed up against one side of the platform as the train pulled up at the other.}}
+#* {{quote-book|en|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}| title={{w|The Celebrity}}| chapter=5| passage=We expressed our readiness, and in ten minutes were in the station wagon, rolling rapidly down the long drive, for it was then after nine.{{...}}As we reached the lodge we heard the '''whistle''', and we backed up against one side of the platform as the train pulled up at the other.}}
 # Any high-pitched sound similar to the sound made by whistling.
 #: ''the '''whistle''' of the wind in the trees''
 # {{lb|en|Cockney rhyming slang}} A [[suit]] (from ''whistle and flute'').
 #* '''2005''', Wally Payne, ''A Minority of One: A Monkey's Tale Continued''
 #*: We soldiers changed into our No.1 dress uniforms, Sid into his best '''whistle''' and we set off for the church.
 # {{lb|en|colloquial}} The mouth and throat; so called as being the organs of whistling.
-#* Walton
+#* {{rfdatek|en|Walton}}
 #*: Let's drink the other cup to wet our '''whistles'''.
 
 ====Derived terms====
@@ -236,7 +234,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 # {{lb|en|intransitive}} To move in such a way as to create a whistling sound.
 #: ''A bullet '''whistled''' past.''
 # {{lb|en|transitive}} To send, signal, or call by a whistle.
-#* Addison
+#* {{rfdatek|en|Addison}}
 #*: He chanced to miss his dog; we stood still till he had '''whistled''' him up.
 
 ====Derived terms====
