--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -33,11 +33,11 @@ Uncertain. Perhaps from {{inh|en|ang|copian||to plunder; pillage; steal}}; or po
 # {{lb|en|transitive}} To [[adopt]].
 #: ''No need to '''cop''' an attitude with me, junior.''
 # {{lb|en|transitive}} To [[earn]] by bad behavior.
-#* {{quote-song|en|year=1992|lyricist={{w|Roxanne Shanté}}|title=Straight Razor|album=The Bitch Is Back|passage=You bust in the house, another bitch’s mouth is suckin on your man's dick<br/>What do you do: think straight? Or do you run to the back,<br/>Open the trunk to the nickel-plate 38?<br/>“Wait wait, baby, please!”<br/>That's the shit he's '''coppin''' when he’s down on both his knees}}
+#* {{quote-song|en|year=1992|lyricist={{w|Roxanne Shanté}}|title=Straight Razor| album=The Bitch Is Back| passage=You bust in the house, another bitch’s mouth is suckin on your man's dick<br/>What do you do: think straight? Or do you run to the back,<br/>Open the trunk to the nickel-plate 38?<br/>“Wait wait, baby, please!”<br/>That's the shit he's '''coppin''' when he’s down on both his knees}}
 # {{lb|en|intransitive|usually with “to”|slang}} to [[admit]], especially to a crime.
 #: ''I already '''copped''' to the murder. What else do you want from me?''
 #: ''Harold '''copped''' to being known as "Dirty Harry".''
-#* {{quote-book|en|title=Mr. Paradise|page=295|author=Elmore Leonard|year=2005|passage=He shot a guy in a bar on Martin Luther King Day and '''copped''' to first-degree manslaughter}}
+#* {{quote-book|en|title=Mr. Paradise|page=295| author={{w|Elmore Leonard}}| year=2005| passage=He shot a guy in a bar on Martin Luther King Day and '''copped''' to first-degree manslaughter}}
 
 =====Derived terms=====
 {{col3|en
@@ -114,7 +114,7 @@ From {{inh|en|enm|cop}}, {{m|enm|coppe}}, from {{inh|en|ang|cop}}, {{m|ang|copp}
 
 # {{lb|en|crafts}} The ball of [[thread]] wound on to the spindle in a spinning machine.
 # {{lb|en|obsolete}} The [[top]], [[summit]], especially of a hill.
-#* Drayton
+#* {{rfdatek|en|Drayton}}
 #*: '''Cop''' they used to call / The tops of many hills.
 # {{lb|en|obsolete}} The [[crown]] (of the head); also the [[head]] itself. {{defdate|14th-15th c.}}
 #: {{ux|en|The stature is bowed down in age, the '''cop''' is depressed.}}
