can be unc. -- how much lead time etc. <lead time#58290846>

--- a/en/l/lead time.775552.wikitext
+++ b/en/l/lead time.775552.wikitext
@@ -5,7 +5,8 @@
 * {{audio|en|En-au-lead time.ogg|Audio (AU)}}
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
+
 # {{lb|en|idiomatic}} The amount of time between the [[initiation]] of some [[process]] and its [[completion]], e.g. the time required to [[manufacture]] or [[procure]] a product; the time required before something can be [[provided]] or [[delivered]].
 #: {{ux|en|It's an excellent device, but it has a 10-week '''lead time''', so be sure to order it in advance.}}
 #* {{quote-journal|en|year=2019|month=October|title=Chase Line service to be split next May|journal=Modern Railways|page=17|text=With long '''lead times''' in timetable planning WMT <small>[West Midlands Trains]</small> has stated that the earliest it can recast the timetable will be May 2020.}}
