--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -42,9 +42,9 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 # {{lb|en|visual art}} The [[thickness]] and [[opacity]] of [[paint]].
 # [[pressure|Pressure]]; [[burden]].
 #: {{ux|en|the '''weight''' of care or business}}
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url, act, scene, line}} {{w|William Shakespeare}}
+#* {{rfdatek|en|William Shakespeare}}
 #*: The '''weight''' of this sad time.
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|John Milton}}
+#* {{rfdatek|en|John Milton}}
 #*: For the public all this '''weight''' he bears.
 # The [[resistance]] against which a [[machine]] acts, as opposed to the power which moves it.
 # {{lb|en|slang|uncountable}} Shipments of (often illegal) drugs.
