--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -30,7 +30,7 @@ From {{etyl|xno|en}} {{m|fro|genette}}, {{etyl|frm|en}} {{m|frm|genette}}, {{m|f
 * Esperanto: {{t|eo|genoto}}
 * Finnish: {{t+|fi|genetti}}
 * French: {{t+|fr|genette|f}}
-* Galician: {{t+|gl|algaria|m}}, {{t+|gl|rabisaco|m}}, {{t+|gl|rabilongo|m}}, {{t+|gl|gato algario|m}}, {{t+|gl|corredoira|f}}
+* Galician: {{t+|gl|algaria|m}}, {{t+|gl|rebisaco|m}}, {{t+|gl|rabilongo|m}}, {{t+|gl|gato algario|m}}, {{t+|gl|corredoira|f}}
 * Georgian: {{t|ka|ვივერა|sc=Geor}}
 {{trans-mid}}
 * German: {{t|de|Genette|n}}, {{t|de|Ginsterkatze|f}}
