/* Noun */ +synonyms <untimeliness#58297245>

--- a/en/u/untimeliness.742256.wikitext
+++ b/en/u/untimeliness.742256.wikitext
@@ -8,6 +8,9 @@
 
 # The state of being [[untimely]].
 
+====Synonyms====
+* {{l|en|intempestivity}}; see also [[Thesaurus:untimeliness]]
+
 ====Translations====
 {{trans-top|state of being untimely}}
 * Estonian: {{t|et|ajakohatus}}
