--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -16,7 +16,7 @@ From {{inh|en|enm|croke}}, {{m|enm|crok}}, from {{inh|en|ang|*crōc|t=hook, bend
 
 # A [[bend]]; [[turn]]; [[curve]]; [[curvature]]; a [[flexure]].
 #: {{ux|en|She held the baby in the '''crook''' of her arm.}}
-#* {{rfdate|en|and other bibliographic particulars and context}} {{w|Thomas Phaer}}
+#* {{rfdatek|en|Thomas Phaer}}
 #*: through lanes, and '''crooks''', and darkness
 # A bending of the knee; a [[genuflection]].
 # A [[bent]] or curved part; a curving piece or portion (of anything).
@@ -31,13 +31,13 @@ From {{inh|en|enm|croke}}, {{m|enm|crok}}, from {{inh|en|ang|*crōc|t=hook, bend
 #*: Even though I walk through a / valley dark as death / I fear no evil, for thou art with me, / thy staff and thy '''crook''' are my / comfort.
 # A bishop's staff of office.
 # An [[artifice]]; a [[trick]]; a [[contrivance]].
-#* {{rfdate|en|and other bibliographic particulars and context}} {{w|Thomas Cranmer}}
+#* {{rfdatek|en|Thomas Cranmer}}
 #*: for all your brags, hooks, and '''crooks'''
 # A person who steals, lies, cheats or does other dishonest or illegal things; a criminal.
 #* '''1973''' November 17, {{w|Richard Nixon}}, reported 1973 November 18, ''The Washington Post'', [http://www.washingtonpost.com/wp-srv/national/longterm/watergate/articles/111873-1.htm ''Nixon Tells Editors, ‘I'm Not a Crook’''],
 #*: "People have got to know whether or not their President is a '''crook'''. Well, I′m not a '''crook'''. I′ve earned everything I′ve got."
 # A [[pothook]].
-#* {{rfdate|en|and other bibliographic particulars and context}} Sir {{w|Walter Scott}}
+#* {{rfdatek|en|Sir Walter Scott}}
 #*: as black as the '''crook'''
 # {{lb|en|music}} A small tube, usually curved, applied to a trumpet, horn, etc., to change its pitch or key.
 
@@ -147,7 +147,7 @@ From {{m|en|crooked||dishonestly come by}}. <ref>[http://andc.anu.edu.au/austral
 #: ''Not turning up for training was pretty '''crook'''.''
 #* '''1981''', Herman Charles Bosman, ''The Collected Works of Herman Charles Bosman'', [http://books.google.com.au/books?id=hNZHAAAAYAAJ&q=%22onkus%22+-intitle:%22%22+-inauthor:%22%22&dq=%22onkus%22+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=_YPHT9qHGM2biQfRicC3Dg&redir_esc=y page 101],
 #*: The soup was '''crook'''. It was [[onkus]]. A yellow-bellied platypus couldn′t drink it {{...}}
-#* {{quote-text|en|year=2004|author={{w|Robert Barnard}}|title=A Cry from the Dark|page=21|url=http://books.google.com.au/books?id=NoOp5G-CGqQC&pg=PA21&dq=%22are%7Cbe+crook+at%22+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=R4QzT82mDY7qmAWVqN2DAg&redir_esc=y#v=onepage&q=%22are%7Cbe%20crook%20at%22%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false|passage=“Things are '''crook''' at home at the moment.”}}
+#* {{quote-text|en|year=2004|author={{w|Robert Barnard}}|title=A Cry from the Dark|page=21|url=http://books.google.com.au/books?id=NoOp5G-CGqQC&pg=PA21&dq=%22are%7Cbe+crook+at%22+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=R4QzT82mDY7qmAWVqN2DAg&redir_esc=y#v=onepage&q=%22are%7Cbe%20crook%20at%22%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false|passage=Things are '''crook''' at home at the moment.}}
 #*: “They′re always '''crook''' at my home.”
 # {{lb|en|Australia|New Zealand|slang}} [[ill|Ill]], [[sick]].
 #: ''I′m feeling a bit '''crook'''.''
@@ -158,7 +158,7 @@ From {{m|en|crooked||dishonestly come by}}. <ref>[http://andc.anu.edu.au/austral
 #* '''2007''', Jo Wainer, ''Bess'', ''Lost: Illegal Abortion Stories'', [http://books.google.com.au/books?id=ln97vrDVN58C&pg=PA159&dq=%22go|gone|went+crook+at%22+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=0oUzT8KBE4X5mAX58pWJAg&redir_esc=y#v=onepage&q=%22go|gone|went%20crook%20at%22%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 159],
 #*: I went home on the tram, then Mum went '''crook''' at me because I was late getting home—I had tickets for Mum and her friend to go to the Regent that night and she was annoyed because I was late.
 #* {{quote-text|en|year=2007|author=Ruby Langford Ginibi|title=Don′t Take Your Love to Town|page=100|url=http://books.google.com.au/books?id=6xEKJLBTnkQC&pg=PA100&dq=%22go%7Cgone%7Cwent+crook+at%22+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=KYozT_ndH8_omAX1ovSSAg&redir_esc=y#v=onepage&q=%22go%7Cgone%7Cwent%20crook%20at%22%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false|passage=I went '''crook''' at them for not telling me and as soon as she was well enough I took her home to the camping area and she soon picked up.}}
-#* {{quote-text|en|year=2009|author=Carolyn Landon|title=Cups With No Handles: Memoir of a Grassroots Activist|page=234|url=http://books.google.com.au/books?id=AkMZc1dAwCsC&pg=PA234&dq=%22go%7Cgone%7Cwent+crook+at%22+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=0oUzT8KBE4X5mAX58pWJAg&redir_esc=y#v=onepage&q=%22go%7Cgone%7Cwent%20crook%20at%22%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false|passage=Mum went '''crook''' at me for wasting money, but when Don got a job and spent all his money on a racing bike, she didn′t say a thing to him.}}
+#* {{quote-text|en|year=2009|author=Carolyn Landon|title=Cups With No Handles| page=234| url=http://books.google.com.au/books?id=AkMZc1dAwCsC&pg=PA234&dq=%22go%7Cgone%7Cwent+crook+at%22+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=0oUzT8KBE4X5mAX58pWJAg&redir_esc=y#v=onepage&q=%22go%7Cgone%7Cwent%20crook%20at%22%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false| passage=Mum went '''crook''' at me for wasting money, but when Don got a job and spent all his money on a racing bike, she didn′t say a thing to him.}}
 
 =====Derived terms=====
 * {{l|en|crook as Rookwood}}
