--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -576,7 +576,7 @@ Ultimately from {{etyl|la|en}} {{m|la|millesimum}}.
 ==Albanian==
 
 ===Etymology===
-From {{inh|sq|sqj-pro|*mis-lo}} (regular sl > Alb. /ll/), from {{der|sq|ine-pro|*mois||sheep, hide; leatherwork}}. Compare {{cog|goh|meisa||baggage}}.
+From {{inh|sq|sqj-pro|*mis-lo}} (regular sl > Alb. /ll/), from {{inh|sq|ine-pro|*mois||sheep, hide; leatherwork}}. Compare {{cog|goh|meisa||baggage}}.
 
 ===Noun===
 {{sq-noun|m|mije|milli|mijet}}
