--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -92,7 +92,7 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmēre}}.
 * Galician: {{t|gl|consumir}}
 * Greek: {{t+|el|καταναλώνω}}
 * Hebrew: {{t+|he|צרך|tr=tsarákh}}
-* Hindi: {{t|hi|उपभोग करना|tr=upbhog karna|sc=Deva}}
+* Hindi: {{t|hi|उपभोग करना}}
 * Hungarian: {{t+|hu|elfogyaszt}}, {{t+|hu|fogyaszt}}
 {{trans-mid}}
 * Ido: {{t+|io|manjar}}
