--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -51,8 +51,12 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 #* {{quote-text|en|year=2001|author={{w|Eric Malpass}}|title=At the Height of the Moon|page=28|url=http://books.google.com.au/books?id=cClq1igzauQC&pg=PA28&dq=%22She+says+Indian+elephants+are+tidgy+little+things%22&hl=en&sa=X&ei=9gsPT9qlMYeaiQf4kdwu&ved=0CDIQ6AEwAA#v=onepage&q=%22She%20says%20Indian%20elephants%20are%20tidgy%20little%20things%22&f=false|passage=‘She says Indian elephants are tidgy little things.’ ¶ ‘They′re not '''then'''.’ Emma was getting heated. ‘They′re –’ ¶ ‘Emma!’ said Jenny sharply. The child subsided.}}
 
 ====Synonyms====
+* {{sense|at that time}} {{l|en|at the time}}, {{l|en|back in the day}}
 * {{sense|soon afterward}} {{l|en|and then}}, {{l|en|and so}}, {{l|en|subsequently}}, {{l|en|so}}
-* {{sense|next in order}} {{l|en|and then}}
+* {{sense|next in order}} {{l|en|and then}}, {{l|en|followed by}}
+* {{sense|in that case}} {{l|en|accordingly}}, {{l|en|as a result}}; see also [[Thesaurus:therefore]]
+* {{sense|at the same time}} {{l|en|concurrently}}, {{l|en|therewhile}}; see also [[Thesaurus:simultaneously]]
+* {{sense|contradiction}}
 
 ====Translations====
 {{trans-top|at that time}}
