--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -233,8 +233,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 # {{lb|en|obsolete|by extension}} A [[physician]].
 # {{lb|en|logic}} A simple or atomic [[proposition]].
 # {{lb|en|obsolete}} Something not [[mixed]] or [[compounded]].
-#* {{rfdatek|en|Shakespeare}}
-#*: compounded of many '''simples'''
+#*{{RQ:Shakespeare As You Like It|act=IV|scene=i|passage=But it is a melancholy of mine own, compounded of many '''simples''', extracted from many objects, and indeed the sundry contemplation of my travels}}
 # {{lb|en|weaving}} A [[drawloom]].
 # {{lb|en|weaving}} Part of the [[apparatus]] for raising the [[heddle]]s of a [[drawloom]].
 # {{lb|en|Roman Catholic}} A [[feast]] which is not a [[double]] or a [[semidouble]].
