--- a/en/s/stoat.8235.wikitext
+++ b/en/s/stoat.8235.wikitext
@@ -2,7 +2,7 @@
 [[File:Mustela erminea upright.jpg|right|thumb|A '''stoat''']]
 
 ===Etymology===
-{{defdate|Mid 1400s}}, from {{inh|en|enm|stote||the ermine, especially in its brown summer coat}}, of uncertain origin. The word bears some resemblance to {{cog|non|stutr||bull}}, {{cog|sv|stut||bull, [[steer]]}} and {{cog|da|stud||ox}} (see also {{cog|en|stot}}), but the semantic link is difficult unless a common origin is from “(brown?) male mammal”.
+{{defdate|Mid 1400s}}, from {{inh|en|enm|stote||the ermine, especially in its brown summer coat}}, of uncertain origin. The word bears some resemblance to {{cog|non|stutr||bull}}, {{cog|sv|stut||bull, [[steer]]}} and {{cog|da|stud||steer}} (see also {{cog|en|stot}}), but the semantic link is difficult unless a common origin is from “(brown?) male mammal”.
 
 ===Pronunciation===
 * {{IPA|en|/ˈstəʊt/}}
