t+fi:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <at the end of one's tether#58381142>

--- a/en/a/at the end of one's tether.776810.wikitext
+++ b/en/a/at the end of one's tether.776810.wikitext
@@ -15,6 +15,7 @@
 {{trans-top|At the limit of one’s patience}}
 * Chinese:
 *: Mandarin: {{t|cmn|在耐心的极限|tr=zài nàixīn de jíxiàn}}
+* Finnish: {{t-needed|fi}}
 * French: {{t+|fr|au bout du rouleau}}, {{t+|fr|exaspéré}}
 {{trans-mid}}
 * Italian: {{t|it|al limite della sopportazione}}
