--- a/en/a/at the end of one's tether.776810.wikitext
+++ b/en/a/at the end of one's tether.776810.wikitext
@@ -15,7 +15,7 @@
 {{trans-top|At the limit of one’s patience}}
 * Chinese:
 *: Mandarin: {{t|cmn|在耐心的极限|tr=zài nàixīn de jíxiàn}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t|fi|[[olla]] [[katkeamispiste|katkeamispisteessä]]}}
 * French: {{t+|fr|au bout du rouleau}}, {{t+|fr|exaspéré}}
 {{trans-mid}}
 * Italian: {{t|it|al limite della sopportazione}}
