t+fi:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <safety catch#58392316>

--- a/en/s/safety catch.776062.wikitext
+++ b/en/s/safety catch.776062.wikitext
@@ -10,8 +10,9 @@
 
 ====Translations====
 {{trans-top|safety catch}}
+* Finnish: {{t-needed|fi}}
 * French: {{t+|fr|cran d'arrêt|m}}
-* Greek: {{t+|el|ασφάλεια|f}}
 {{trans-mid}}
+* Greek: {{t+|el|ασφάλεια|f}}
 * Russian: {{t+|ru|предохрани́тель|m}}
 {{trans-bottom}}
