--- a/en/s/safety catch.776062.wikitext
+++ b/en/s/safety catch.776062.wikitext
@@ -10,7 +10,7 @@
 
 ====Translations====
 {{trans-top|safety catch}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|varmistin}}
 * French: {{t+|fr|cran d'arrêt|m}}
 {{trans-mid}}
 * Greek: {{t+|el|ασφάλεια|f}}
