--- a/en/r/ready-made.741519.wikitext
+++ b/en/r/ready-made.741519.wikitext
@@ -5,7 +5,7 @@
 ===Adjective===
 {{en-adj|head=[[ready]]-[[made]]}}
 
-# Preexisting or made previously and suitable for use without (further) preparation or modification; ''comparable with regard to the amount of preparation required''.
+# Pre-existing or made previously and suitable for use without (further) preparation or modification; ''comparable with regard to the amount of preparation required''.
 #* '''1937''', Association for Childhood Education International, ''Childhood Education'', Volume 14, [https://books.google.com.au/books?id=nM0VAQAAIAAJ&q=%22the+more%7Cmost+ready-made%22&dq=%22the+more%7Cmost+ready-made%22&hl=en&sa=X&ei=su7yVN4uz_nxBbzzgcAE&redir_esc=y page 35],
 #*: Incidentally, they became mindful of the meaning of thrift and waste and learned to practice an economy of material and operations which was not elicited in the play with the more '''ready-made''' educational material.
 #* '''1993''', Leslie Howard Owens, ''Commentary'' to Bill C.Malone, ''Blacks and Whites and the Music of the Old South'', Ted Ownby (editor), ''Black and White'', [https://books.google.com.au/books?id=cM93Z7Mq06AC&pg=PA185&dq=%22the+more%7Cmost+ready-made%22&hl=en&sa=X&ei=su7yVN4uz_nxBbzzgcAE&redir_esc=y#v=onepage&q=%22the%20more%7Cmost%20ready-made%22&f=false page 185],
@@ -17,6 +17,7 @@
 #*: During the 1830s and 1840s, '''ready-made''' standardized shoes and clothing increasingly challenged the custom-made products of small handicraft workshops.
 #* '''2000''', Diana Crane, ''Fashion and Its Social Agendas: Class, Gender, and Identity in Clothing'', [https://books.google.com.au/books?id=vphcHONAXmwC&pg=PA75&dq=%22ready-made%22&hl=en&sa=X&ei=cA7zVJmmBaK2mwXClILoDw&redir_esc=y#v=onepage&q=%22ready-made%22&f=false page 75],
 #*: Commercial use of these machines was enhanced by the development of a system of proportional measurements and subsequently of proportional sizes, making feasible '''ready-made''' clothing on a mass scale.
+#* {{quote-journal|en|date=2020 January 2|author=Graeme Pickering|title=Fuelling the changes on Teesside rails|journal=Rail|page=57|text=The Tees Valley already produces more than 50% of all the hydrogen in the UK so it makes sense to bring it <small>[hydrogen fuelling]</small> here because you've already got a '''ready-made''' supply.}}
 # Made or prepared in advance and used regularly or habitually without original thought.
 #* '''2008''', Elizabeth A. Grosz, ''Chaos, Territory, Art: Deleuze and the Framing of the Earth'', [https://books.google.com.au/books?id=OWd-Q8a2n2UC&pg=PA4&dq=%22the+more%7Cmost+ready-made%22&hl=en&sa=X&ei=su7yVN4uz_nxBbzzgcAE&redir_esc=y#v=onepage&q=%22the%20more%7Cmost%20ready-made%22&f=false page 4], footnote,
 #*: {{...}}including both the most everyday and popular, the most '''ready-made''' or found objects, the most quotidian of performances.
