--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -44,8 +44,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 ##: {{ux|en|a '''simple''' ascidian}}
 ## {{lb|en|mineralogy}} [[homogenous|Homogenous]].
 # {{lb|en|obsolete}} Mere; not other than; being only.
-#* {{rfdatek|en|William Shakespeare}}
-#*: A medicine{{...}}whose '''simple''' touch / Is powerful to araise King Pepin.
+#*{{RQ:Shakespeare All's Well|act=II|scene=i|passage=A medicine{{...}}whose '''simple''' touch / Is powerful to araise King Pepin.}}
 
 ====Synonyms====
 * {{sense|consisting of a single part or aspect}} {{l|en|onefold}}
