/* Derived terms */ <simple#58443931>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -508,6 +508,7 @@ Borrowed from {{bor|es|la|simplex}}.
 
 ====Derived terms====
 * {{l|es|a simple vista}}
+* {{l|comillas simples}}
 * {{l|es|movimiento armónico simple}}
 
 ====Descendants====
