--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -77,6 +77,9 @@ Not productive, and rarely used; {{m|en|-ana}} and {{m|en|-ia}} are more common.
 ===Etymology===
 From {{inh|pl|sla-pro|*-ica}}.
 
+===Pronunciation===
+* {{pl-IPA}}
+
 ===Suffix===
 {{head|pl|suffix|g=f}}
 
