--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -1,6 +1,8 @@
 {{also|⺼|冃|🈷}}
 {{character info/subpage}}
 {{character info/new|🈷}}
+{{commonscat}}
+
 ==Translingual==
 {{stroke order|strokes=4}}
 {{stroke order|type=animate}}
