--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -361,7 +361,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{t-check|te|బూర ఊదు|sc=Telu}}
+* Telugu: {{t-check|te|బూర ఊదు|sc=Telu}}
 {{trans-mid}}
 {{trans-bottom}}
 
