t+kk:[[азиридин]] ([[WT:EDIT|Assisted]]) <aziridine#58564019>

--- a/en/a/aziridine.742293.wikitext
+++ b/en/a/aziridine.742293.wikitext
@@ -28,6 +28,7 @@
 * Finnish: {{t|fi|etyleeni-imiini}}
 {{trans-mid}}
 * German: {{t|de|Ethylenimin|n}}
+* Kazakh: {{t|kk|азиридин}}
 * Korean: {{t|ko|에틸렌이민}}
 {{trans-bottom}}
 
