t+ja:[[アジリジン]] ([[WT:EDIT|Assisted]]) <aziridine#58564086>

--- a/en/a/aziridine.742293.wikitext
+++ b/en/a/aziridine.742293.wikitext
@@ -30,6 +30,7 @@
 {{trans-mid}}
 * French: {{t|fr|aziridine|f}}
 * German: {{t|de|Ethylenimin|n}}
+* Japanese: {{t|ja|アジリジン|tr=ajirijin}}
 * Kazakh: {{t|kk|азиридин}}
 * Korean: {{t|ko|에틸렌이민}}
 * Persian: {{t|fa|آزیریدین}}
