/* Noun */ # {{lb|en|uncountable}} The [[meat]] from this animal. <rabbit#58576005>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -17,12 +17,13 @@
 From {{inh|en|enm|rabet}}, {{m|enm|rabette}}, from {{der|en|fro|-}} dialect (now found in {{cog|fr|-}} dialect as {{m|frm|rabbotte}}, {{m|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot|t=plane}}), coming via {{cog|wa|-}} {{der|en|fro|-}} (reflected nowadays as {{cog|wa|robète|t=rabbit}}), from {{der|en|dum|robbe|t=rabbit; seal}}. This word is akin to {{cog|gml|robbe}}, {{m|gml|rubbe|t=rabbit}}, and the later {{cog|nds|Rubbe|t=seal}}, {{cog|fy|robbe|t=seal}}, {{cog|stq|robbe|t=seal}}, {{cog|frr|rob|t=seal}}, borrowed into {{cog|de|Robbe|t=seal}}, but is of uncertain motivation; some imitative verb, maybe {{m|dum|robben}}, {{m|gml|rubben|t=to rub}} is used here to allude to a characteristic of the animal.
 
 ====Noun====
-{{en-noun}}
+{{en-noun|~}}
 
 # A [[mammal]] of the family [[Leporidae]], with long ears, long [[hind leg]]s and a short, [[fluffy]] tail.
 #: {{ux|en|The pioneers survived by eating the small game they could get: '''rabbits''', squirrels and occasionally a raccoon.}}
 #* {{RQ:Jefferies Amateur Poacher|chapter=The Old Punt: A Curious ‘Turnpike’|pages=19–20|pageref=19|passage=Orion hit a '''rabbit''' once; but though sore wounded it got to the bury, and, struggling in, the arrow caught the side of the hole and was drawn out. Indeed, a nail filed sharp is not of much avail as an arrowhead; you must have it barbed, and that was a little beyond our skill.}}
-# The [[fur]] of a rabbit typically used to imitate another [[animal]]'s fur.
+# {{lb|en|uncountable}} The [[meat]] from this animal.
+# {{lb|en|uncountable}} The [[fur]] of a rabbit typically used to imitate another [[animal]]'s fur.
 # A [[runner]] in a [[distance]] [[race]] whose goal is mainly to set the [[pace]], either to [[tire]] a specific [[rival]] so that a [[teammate]] can win or to help another break a [[record]]; a [[pacesetter]].
 # {{lb|en|cricket}} A very poor [[batsman]]; selected as a [[bowler]] or [[wicket-keeper]].
 # {{lb|en|comptheory}} A large [[element]] at the beginning of a [[list]] of items to be [[bubble sort]]ed, and thus tending to be quickly swapped into its correct position. Compare {{m|en|turtle}}.
