--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -48,7 +48,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Albanian: {{t+|sq|mjekër|f}}
 * Alemannic German: {{t|gsw|Koi}} {{qualifier|Swiss}}, {{t|gsw|Kehn}} {{qualifier|Alsatian}}
 * Amharic: {{t|am|ሸንጎበት|sc=Ethi}}, {{t|am|አገጭ|sc=Ethi}}
-* Arabic: {{t+|ar|ذَقْن|f|tr=ḏaqn}}
+* Arabic: {{t+|ar|ذَقْن|f}}
 *: Egyptian Arabic: {{t|arz|دقن|tr=daʾn|sc=Arab}}
 * Aragonese: {{t|an|mentón|m}}, {{t|an|barbeta|f}}
 * Armenian: {{t+|hy|կզակ}}
@@ -82,7 +82,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Cornish: {{t|kw|elgeth|f}}
 * Corsican: {{t|co|mentu|m|alt=méntu}}
 * Cree:
-*: Plains: {{t|crk|ᒥᑖᐱᐢᑲᐣ|tr=mitâpiskan}}, {{t|crk|ᒥᑳᐧᐢᑯᓀᐤ|tr=mikwâskonêw}}, {{t|crk|ᒥᑳᐧᐢᑯᓀᐃᐧᑲᐣ|tr=mikwâskonêwikan}}
+*: Plains: {{t|crk|ᒥᑖᐱᐢᑲᐣ}}, {{t|crk|ᒥᑳᐧᐢᑯᓀᐤ}}, {{t|crk|ᒥᑳᐧᐢᑯᓀᐃᐧᑲᐣ}}
 * Czech: {{t+|cs|brada|f}}
 * Dakota: {{t|dak|iku}}
 * Danish: {{t+|da|hage|c}}
@@ -172,7 +172,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Manx: {{t|gv|smeg|f}}, {{t|gv|smeggin|m}}, {{t|gv|smeggyl|m}}
 * Maori: {{t|mi|kauwae}}, {{t|mi|pūkauae}}
 * Mapudungun: {{t|arn|ketre}}
-* Marathi: {{t|mr|हनुवडी|tr=hanuvaḍī|sc=Deva}}
+* Marathi: {{t|mr|हनुवडी}}
 * Mari: {{t|udm|оҥылаш|sc=Cyrl}}
 * Mirandese: {{t|mwl|queixo|m}}
 * Moksha: {{t|mdf|ула|sc=Cyrl}}
