--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -303,10 +303,13 @@ From {{inh|fro|LL.|domna}}, shortened variant of {{inh|fro|la|domina}}.
 * Unlike in modern French, ''[[fame#Old French|fame]]'' usually refers to a {{l|en|wife}}, while ''dame'' refers to a {{l|en|woman}}.
 
 ====Descendants====
+* {{desc|frm|dame}}
+** {{desc|fr|dame}}
+*** {{desc|fr|dame|bor=1}}
 * {{desc|roa-brg|daime}}
-* {{desc|en|dame}}
-* {{desc|fr|dame}}
-* {{desc|nrf|danme}}
+* {{desc|roa-fcm|daime}}
+* {{desc|roa-lor|daime}}
+* {{desc|nrf|dame}}
 * {{desc|pcd|danme}}
 
 [[Category:fro:People]]
