t+fi:[[pyörömeisti]] t-balance ([[WT:EDIT|Assisted]]) <mill#58609891>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -377,6 +377,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 {{trans-bottom}}
 
 {{trans-top|die sinking: hardened steel roller with a design in relief}}
+* Finnish: {{t|fi|pyörömeisti}}
 {{trans-mid}}
 {{trans-bottom}}
 
