t+fi:[[tutkintotehdas]] t-balance ([[WT:EDIT|Assisted]]) <mill#58609929>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -363,6 +363,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 {{trans-bottom}}
 
 {{trans-top|derogatory: institution awarding unofficial educational certificates}}
+* Finnish: {{t|fi|tutkintotehdas}}
 {{trans-mid}}
 {{trans-bottom}}
 
