t+ca:[[pes]] t-balance ([[WT:EDIT|Assisted]]) <weight#58624806>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -232,6 +232,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 {{trans-top|standardized measuring weight}}
 * Arabic: {{t+|ar|ثِقْل|m}}
 * Armenian: {{t+|hy|կշռաքար}}
+* Catalan: {{t+|ca|pes|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|砝碼|sc=Hani}}, {{t+|cmn|砝码|tr=fámǎ|sc=Hani}}
 * Estonian: {{t|et|kaaluma}}
@@ -241,8 +242,8 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 *: Ancient: {{t|grc|σταθμίον|n}}
 * Hebrew: {{t+|he|מִשְׁקֹלֶת|f|tr=mishqólet}}
 * Hungarian: {{t+|hu|súly}}
-* Japanese: {{t|ja|分銅|tr=fundō}}
 {{trans-mid}}
+* Japanese: {{t|ja|分銅|tr=fundō}}
 * Korean: {{t+|ko|체중}}
 * Maori: {{t|mi|maihea}}
 * Old English: {{t|ang|ġewiht|n}}
