t+cmn:[[尽管]] ([[WT:EDIT|Assisted]]) <though#58671596>

--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -90,7 +90,7 @@ From {{etyl|enm|en}} {{m|enm|thaugh}}, {{m|enm|thagh|}}, from {{etyl|ang|en}} {{
 {{trans-top|although}}
 * Arabic: {{t|ar|رَغْم أَنّ}}
 * Chinese:
-*: Mandarin: {{t+|cmn|虽然}}
+*: Mandarin: {{t+|cmn|虽然}}, {{t+|cmn|尽管}}
 * Czech: {{t+|cs|ačkoli}}
 * Danish: {{t+|da|dog}}
 * Dutch: {{t+|nl|hoewel}}
