t+eu:[[erraz]] ([[WT:EDIT|Assisted]]) <simple#58676498>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -71,7 +71,7 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 * Aymara: {{t-needed|ay}}
 * Azerbaijani: {{t+|az|sadə}}, {{t+|az|bəsit}}
 * Bashkir: {{t|ba|ябай}}
-* Basque: {{t-needed|eu}}
+* Basque: {{t+|eu|erraz}}
 * Belarusian: {{t|be|про́сты}}, {{t|be|лёгкі}} {{qualifier|easy}}
 * Bengali: {{t|bn|সহজ}}
 * Breton: {{t-needed|br}}
