===Noun=== {{en-noun|~}}  # A clinch; a passionate embrace. #* '''1937''', ''Motion Picture Herald'' (volume 127, issues 1-6, page 42) #*: Though there are no kissings and '''clinchings''', {{...}} # A making certain or finalizing. #* '''2015''', George Becnel, ''The Southland Conference: Small College Football, Big Dreams'' #*: Only six weeks into the season, the top-ranked Bulldogs were undefeated at 60, but more important to Louisiana Tech was one of the earliest '''clinchings''' of a confere <clinching#58695789>

--- a/en/c/clinching.746647.wikitext
+++ b/en/c/clinching.746647.wikitext
@@ -21,3 +21,18 @@
 #*: That might have once … But that was all gone by
 #* '''1960''', “Breaking the Fast,” ''[[w:Time (magazine)|Time]]'', 22 February, 1960,<sup>[http://www.time.com/time/magazine/article/0,9171,939596,00.html]</sup>
 #*: He shocked his hearers by urging them not to fast during Ramadan, which begins Feb. 29. As a '''clinching''' argument, Bourguiba recalled that even Mohammed, when inconveniently overtaken by Ramadan on his march to Mecca, counseled his soldiers: “Break the fast, and you will be stronger to confront the enemy.”
+
+===Noun===
+{{en-noun|~}}
+
+# A clinch; a passionate embrace.
+#* '''1937''', ''Motion Picture Herald'' (volume 127, issues 1-6, page 42)
+#*: Though there are no kissings and '''clinchings''', {{...}}
+# A making certain or finalizing.
+#* '''2015''', George Becnel, ''The Southland Conference: Small College Football, Big Dreams''
+#*: Only six weeks into the season, the top-ranked Bulldogs were undefeated at 60, but more important to Louisiana Tech was one of the earliest '''clinchings''' of a conference title in the annals of college football.
+# {{lb|en|computing|historical}} The distortion of computer tape by wrinkling.
+#* '''1985''', Alvin C. Larson, ''Computer Operator (AFSC 51150)'' (page 87)
+#*: This “'''clinching'''” can distort the tape by causing a series of creases or folds in the surface and may produce read errors.
+#* '''1987''', ''Conservation Administration News'' (issues 28-35, page 29)
+#*: Computer magnetic tape is designed primarily for its storage capacity, speed, and capacity to be repeatedly erased and written over. {{...}} Bad binder can cause holes in the oxide, loose particles, or '''clinching''' of tape.
