t+ary:[[ڭنينة]] ([[WT:EDIT|Assisted]]) <rabbit#58701334>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -64,6 +64,7 @@ From {{inh|en|enm|rabet}}, {{m|enm|rabette}}, from {{der|en|fro|-}} dialect (now
 *: Western Apache: {{t|apw|gah}}
 * Arabic: {{t|ar|أرنب|m|alt=أَرْنَب}}
 *: Egyptian Arabic: {{t|arz|ارنب|m|tr=arnab}}
+*: Moroccan Arabic: {{t|ary|ڭنينة|tr=gnīna}}
 * Armenian: {{t+|hy|ճագար|sc=Armn}}
 * Aromanian: {{t|rup|ljepuri|m}}, {{t+|rup|ljepure|m}}, {{t|rup|ljepur|m}}
 * Assamese: {{t|as|শহা}}, {{t|as|শহাপহু}}
