--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -215,7 +215,7 @@ From {{inh|en|enm|rabet}}, {{m|enm|rabette}}, from {{der|en|fro|-}} dialect (now
 * Spanish: {{t+|es|conejo|m}}
 * Swahili: {{t+|sw|sungura}}
 * Swedish: {{t+|sv|kanin|c}}
-* Tagalog: {{t|tl|buot}}, {{t+|tl|kuneho}}
+* Tagalog: {{t+|tl|kuneho}}
 * Tajik: {{t+|tg|харгӯш|sc=Cyrl}}
 * Tamil: {{t+|ta|முயல்|sc=Taml}}
 * Taos: {{t|twf|pȉwéna}}
