/* Noun */ Added en-noun template, with unattested plural <w/o#58710679>

--- a/en/w/w/o.26235.wikitext
+++ b/en/w/w/o.26235.wikitext
@@ -6,6 +6,8 @@
 # {{lb|en|finance|insurance}} {{abbreviation of|en|write off}}
 
 ===Noun===
+{{en-noun|!}}
+
 # {{lb|en|sport}} {{abbreviation of|en|walkover}} 
 #{{lb|en|scheduling}} {{abbreviation of|en|[[week]] of}}
 #: '''''w/o''' January 7th'' 
