// Edit via Wikiplus <月#58724872>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -1,4 +1,4 @@
-{{also|⺼|冃|🈷}}
+{{also|⺼|冃|🈷|㈪|㊊}}
 {{character info/subpage}}
 {{character info/🈷}}
 {{commonscat}}
@@ -79,7 +79,7 @@ From {{inh|zh|sit-pro|*s-ŋʷ(j)a-t||moon; star}}, whence also {{w|Magar}} {{m|u
 # {{zh-classifier|[[month]]s}}
 # {{surname|zh}}
 
-=====Citations=====
+=====Quotations=====
 {{seeCites|zh}}
 
 =====Synonyms=====
@@ -117,8 +117,7 @@ From {{inh|zh|sit-pro|*s-ŋʷ(j)a-t||moon; star}}, whence also {{w|Magar}} {{m|u
 * {{R:twedu|A01841}}
 * {{thcwd|812}}
 
-{{zh-cat|Beginning}}
-{{zh-cat|Astronomy|Time}}
+{{zh-cat|Beginning|Astronomy|Time}}
 
 ----
 
