--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -11,6 +11,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 * {{audio|en|en-us-rot.ogg|Audio (US)}}
 * {{a|AU|NZ}} {{IPA|en|/ɹɔt/}}
 * {{rhymes|en|ɒt}}
+* {{homophones|en|wrought}} {{qualifier|in accents with the [[cot-caught merger]]}}
 
 ===Verb===
 {{en-verb|rott}}
