--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -92,7 +92,7 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 {{trans-mid}}
 * Italian: {{t+|it|ecco}}
 * Kurdish:
-*: Central Kurdish: {{t|ckb|ئەوەتا|tr=eweta}}, {{t|ckb|ئەمەتا|tr=emeta}}
+*: Central Kurdish: {{t|ckb|ئەوەتا}}, {{t|ckb|ئەمەتا}}
 * Latin: {{t|la|ecce}}
 * Portuguese: {{t+|pt|eis}}
 * Russian: {{t+|ru|вот}}
