/* Derived terms */ added Scotchka <vodka#58757786>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -43,6 +43,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 |caipivodka
 |vodka sauce
 |vodkaholic
+|Scotchka
 }}
 
 ====Translations====
