t+fa:[[بالکان]] ([[WT:EDIT|Assisted]]) <Balkans#58759467>

--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -71,6 +71,7 @@ Of {{etyl|trk|en}} origin. Compare {{cog|tr|balkan||wooded mountain range}}.
 * Norwegian:
 *: Bokmål: {{t|nb|Balkan}}
 *: Nynorsk: {{t|nn|Balkan}}
+* Persian: {{t+|fa|بالکان|tr=balkan}}
 * Polish: {{t+|pl|Bałkany}}
 * Portuguese: {{t|pt|Balcãs|m-p}}, {{t|pt|Bálcãs|m-p}}
 * Romanian: {{t|ro|Balcani|m-p}}, {{t|ro|Peninsula Balcanică|f}}
