--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -14,13 +14,13 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 {{rfc|en|Malory quote is malformatted and is Middle English (enm) - RFV for the New English (en) sense?)}}
 
 # {{lb|en|intransitive|of a person or animal}} To [[lose]] [[blood]] through an [[injured]] [[blood vessel]].
-#: ''If her nose '''bleeds''', try to use ice.''
+#: {{ux|en|If her nose '''bleeds''', try to use ice.}}
 # {{lb|en|transitive}} To [[let]] or [[draw]] [[blood]] from.
 #* '''1979''', Octavia Butler, ''Kindred'':
 #*: "What did they die of?" I asked.<br/>"Fevers. The doctor came and '''bled''' them and purged them, but they still died."<br/>"He '''bled''' and purged babies?"<br/>"They were two and three. He said it would break the fever. And it did. But they ... they died anyway."
 # {{lb|en|transitive}} To [[take]] large amounts of [[money]] from.
 # {{lb|en|transitive}} To steadily lose (something vital).
-#: ''The company was '''bleeding''' talent.''
+#: {{ux|en|The company was '''bleeding''' talent.}}
 # {{lb|en|intransitive|of an ink or dye}} To [[spread]] from the intended location and [[stain]] the surrounding [[cloth]] or [[paper]].
 #: {{ux|en|[[ink trap|Ink trap]]s [[counteract]] '''bleeding'''.}}
 # {{lb|en|transitive}} To [[remove]] [[air]] bubbles from a [[pipe]] containing [[fluid]]s.
@@ -28,30 +28,31 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 #* {{RQ:Mlry MrtArthr1|VIII}}
 #*: And so Sir Trystrames '''bledde''' bothe the over-shete and the neyther-shete, and the pylowes and the hede-shete
 # {{lb|en|intransitive|copulative}} To show one's group loyalty by showing (its associated color) in one's blood.
-#: ''He was a devoted Vikings fan: he '''bled''' purple.''
+#: {{ux|en|He was a devoted Vikings fan: he '''bled''' purple.}}
 # To lose sap, gum, or juice.
-#: ''A tree or a vine '''bleeds''' when tapped or wounded.''
+#: {{ux|en|A tree or a vine '''bleeds''' when tapped or wounded.}}
 # To issue forth, or drop, like blood from an incision.
 #* {{rfdatek|en|Alexander Pope}}
 #*: For me the balm shall '''bleed'''.
 # {{lb|en|phonology|transitive|of a phonological rule}} To destroy the environment where another phonological rule would have applied.
-#: ''Labialization '''bleeds''' palatalization.''
+#: {{ux|en|Labialization '''bleeds''' palatalization.}}
 
 ====Derived terms====
-{{der-top}}
-* {{l|en|bleed dry}}
-* {{l|en|bleed out}}
-* {{l|en|bleed white}}
-{{der-mid}}
-* {{l|en|bleeder}}
-* {{l|en|bleeding heart}}
-{{der-bottom}}
+{{col3|en
+|bleed dry
+|bleed out
+|bleed white
+|bleeder
+|bleeding heart
+}}
 
 ====Related terms====
-* {{l|en|blood}}
-* {{l|en|bloody}}
-* {{l|en|bless}}
-* {{l|en|blessing}}
+{{col4|en
+|blood
+|bloody
+|bless
+|blessing
+}}
 
 ====Translations====
 {{trans-top|lose blood}}
@@ -62,12 +63,12 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 * Aromanian: {{t|rup|sãndzinedz}}, {{t|rup|sãndzinedzu}}
 * Asturian: {{t|ast|sangrar}}
 * Basque: {{t-needed|eu}}
-* Bengali: {{t|bn|রক্ত ঝরা|sc=Beng}}, {{t|bn|রক্ত পড়া|sc=Beng}}
+* Bengali: {{t|bn|রক্ত ঝরা}}, {{t|bn|রক্ত পড়া}}
 * Bulgarian: {{t|bg|тече кръв}}
 * Catalan: {{t+|ca|sagnar}}
 * Chinese:
 *: Cantonese: {{t|yue|流血|tr=lau4 hyut3}}
-*: Mandarin: {{t+|cmn|出血|tr=chūxiě}}, {{t+|cmn|流血|tr=liúxuè, liúxiě}}, {{t+check|cmn|放血|tr=fàngxuè|sc=Hani}}
+*: Mandarin: {{t+|cmn|出血|tr=chūxiě}}, {{t+|cmn|流血|tr=liúxuè, liúxiě}}, {{t+check|cmn|放血|tr=fàngxuè}}
 * Czech: {{t+|cs|krvácet}}
 * Danish: {{t+|da|bløde}}
 * Dutch: {{t+|nl|bloeden}}
@@ -77,7 +78,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 * French: {{t+|fr|saigner}}
 * Friulian: {{t|fur|sanganâ}}
 * Galician: {{t+|gl|sangrar}}
-* Georgian: {{t|ka|სისხლის დენა|sc=Geor}}, {{t|ka|სისხლდენა|sc=Geor}}
+* Georgian: {{t|ka|სისხლის დენა}}, {{t|ka|სისხლდენა}}
 * German: {{t+|de|bluten}}
 * Greek: {{t+|el|αιμορραγώ}}, {{t+|el|ματώνω}}
 * Hebrew: {{t|he|דִּימֵּם|tr=dimem}}
@@ -85,7 +86,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 * Hungarian: {{t+|hu|vérzik}}
 * Icelandic: {{qualifier|impersonal}} {{t|is|blæða}}
 * Ido: {{t+|io|sangifar}}
-* Indonesian: [[darah|berdarah]], [[keluar|mengeluarkan]] [[darah]], [[kucur|mengucurkan]] [[darah]], [[alir|mengalirkan]] [[darah]]
+* Indonesian: {{t+check|id|darah|alt=berdarah}}, {{t-check|id|[[keluar|mengeluarkan]] [[darah]]}}, {{t-check|id|[[kucur|mengucurkan]] [[darah]]}}, {{t-check|id|[[alir|mengalirkan]] [[darah]]}}
 * Interlingue: {{t|ie|sanguar}}
 * Irish: {{t|ga|cuir fuil}}
 * Italian: {{t+|it|sanguinare}}
@@ -108,14 +109,16 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 * Occitan: {{t+|oc|sagnar}}
 * Old French: {{t|fro|saingnier}}
 * Old Norse: {{t|non|blǿða}}, {{t|non|blœða}}
-* Persian: {{t|fa|خون آمدن|tr=xun âmadan|sc=fa-Arab}}
+* Persian: {{t|fa|خون آمدن|tr=xun âmadan}}
 * Polish: {{t+|pl|krwawić}}
 * Portuguese: {{t+|pt|sangrar}}
 * Romanian: {{t+|ro|sângera}}
 * Russian: {{t+|ru|кровоточи́ть}} (seldom used, {{t|ru|име́ть кровотече́ние}}, {{t|ru|идёт кровь}})
 * Sardinian: {{t|sc|sambenàre}}, {{t|sc|sambenàri}}, {{t|sc|sanguinai}}
 * Scottish Gaelic: {{t|gd|leig fuil}}, {{qualifier|nose}} {{t|gd|leum}}
-* Serbo-Croatian: {{t|sh|крва́рити}}, {{t+|sh|krváriti}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|крва́рити}}
+*: Roman: {{t+|sh|krváriti}}
 * Sicilian: {{t+|scn|sanguniari}}, {{t+|scn|sanguinari}}
 * Slovak: {{t|sk|krvácať}}
 * Slovene: {{t+|sl|krvaveti}}
