t+ang:[[agen]] ([[WT:EDIT|Assisted]]) <again#58762567>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -180,6 +180,7 @@ From {{inh|en|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, fr
 *: Bokmål: {{t+|nb|igjen}}, {{t|nb|på nytt}}
 *: Nynorsk: {{t|nn|igjen}}, {{t|nn|på ny}}, {{t|nn|på nytt}}
 * Occitan: {{t+|oc|encara}}, {{t|oc|de nòu}}
+* Old English: {{t|ang|aġēn}}
 * Pashto: {{t+|ps|بيا|tr=byâ}}
 * Persian: {{t+|fa|دگربار|tr=degarbâr}}, {{t+|fa|دوباره|tr=do-bâre}}, {{t+|fa|باز|tr=bâz}}, {{t|fa|از نو|tr=az now}}
 * Polish: {{t+|pl|ponownie}}, {{t+|pl|znowu}}, {{t|pl|jeszcze raz}}
