t+ko:[[빼기]] ([[WT:EDIT|Assisted]]) <subtraction#58774905>

--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -53,7 +53,7 @@ Borrowed from {{bor|en|LL.|subtractio|subtractio, subtractionis}}.
 * Kannada: {{t|kn|ವ್ಯವಕಲನ}}
 {{trans-mid}}
 * Kazakh: {{t|kk|азайту}}
-* Korean: {{t+|ko|뺄셈}}
+* Korean: {{t+|ko|뺄셈}}, {{t+|ko|빼기}}
 * Latvian: {{t|lv|atņemšana|f}}
 * Lithuanian: {{t|lt|atimtis|m}}
 * Macedonian: {{t|mk|одземање|n}}
