t+ko:[[곱하기]] ([[WT:EDIT|Assisted]]) <multiplication#58774906>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -63,7 +63,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Icelandic: {{t+|is|margföldun|f}}
 * Italian: {{t+|it|moltiplicazione|f}}
 * Japanese: {{t+|ja|掛け算|tr=かけざん, kakezan}}, {{t|ja|乗法|tr=じょうほう, jōhō}}
-* Korean: {{t+|ko|곱셈}}, {{t+|ko|승법}}
+* Korean: {{t+|ko|곱셈}}, {{t+|ko|승법}}, {{t+|ko|곱하기}}
 * Latvian: {{t|lv|reizināšana|f}}
 * Lithuanian: {{t+|lt|daugyba|f}}
 * Macedonian: {{t|mk|множење|n}}
