Reverted edits by [[Special:Contributions/105.112.113.243|105.112.113.243]]. If you think this rollback is in error, please leave a message on my [[User talk:Surjection|talk page]]. <metallurgist#58778545>

--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -10,7 +10,7 @@
 # A person skilled in [[metallurgy]].
 
 ====Translations====
-{{trans-top|person skilled in separating metals from their ores and compound alloy using science and technology}}
+{{trans-top|person skilled in metallurgy}}
 * Armenian: {{t+|hy|մետաղագործ}}
 * Belarusian: {{t|be|металу́рг|m}}
 * Bulgarian: {{t|bg|металу́рг|m}}
