/* Translations */ Added Sanskrit translation of this word. <bent#58780101>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -71,6 +71,7 @@ From {{m|en|bend}}.
 * Quechua: {{t|qu|wist'u}}
 * Romanian: {{t+|ro|gârbov}}, {{t+|ro|îndoit}}
 * Russian: {{t+|ru|со́гнутый}}, {{t+|ru|изо́гнутый}}, {{t+|ru|гну́тый}}, {{t+|ru|криво́й}}, {{t+|ru|искривлённый}}
+* Sanskrit: {{t+|sa|भुग्न}}
 * Scottish Gaelic: {{t|gd|lùbach}}
 * Spanish: {{t+|es|doblado}}
 * Sundanese: {{t|su|ᮘᮤᮀᮊᮨᮀ}}
